--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -152,7 +152,7 @@ Furthermore, embeddings can be used in building ML models directly as features i
 
 Embeddings are popular for representing different types of objects across various domains and applications in machine learning. 
 Most of the embedding methods in the area of representation learning, however, have been focused on the core machine learning domains, including NLP (e.g., ELMO~\citep{Peters2018DeepCW}, BERT~\citep{Devlin2019BERTPO}), speech (e.g., CPC~\citep{Oord2018RepresentationLW}) and computer vision (CV)~\citep{Doersch2015UnsupervisedVR, Oord2018RepresentationLW}.
-Note that NLP, audio and computer vision domains are similar in the sense that the data of this type is "continuous": a short term in NLP can be accurately reconstructed from its context, similar to the way a pixel can be reconstructed from its neighboring pixels in CV. This fact underlies popular approaches for representation learning in NLP, such as BERT’s Cloze task~\citep{Devlin2019BERTPO}, and in audio and computer vision, such as CPC~\citep{Oord2018RepresentationLW}. In contrast, a single token cannot be properly determined from its neighbor tokens for many types of financial transactional sequences because the mutual information between a token and its neighbors is limited. For this reason, most of the state-of-the-art representation learning methods are not applicable to the customer's transactional sequences in many financial applications.
+Note that NLP, audio and computer vision domains are similar in the sense that the data of this type is "continuous": a short term in NLP can be accurately reconstructed from its context, similar to the way a pixel can be reconstructed from its neighboring pixels in CV. This fact underlies popular approaches for representation learning in NLP, such as BERT's Cloze task~\citep{Devlin2019BERTPO}, and in audio and computer vision, such as CPC~\citep{Oord2018RepresentationLW}. In contrast, a single token cannot be properly determined from its neighbor tokens for many types of financial transactional sequences because the mutual information between a token and its neighbors is limited. For this reason, most of the state-of-the-art representation learning methods are not applicable to the customer's transactional sequences in many financial applications.
 
 %\footnote{See, e.g., keynote by Yann LeCun at ICLR-20: https://www.iclr.cc/virtual\_2020/speaker\_7.html}%
 
@@ -401,7 +401,7 @@ We compare our method with existing baselines on several publicly available data
 
 To check that considered datasets follow our repeatability and periodicity assumption made in Section~\ref{sec-pos-pairs}
 %and used for theoretical analysis in Section~\ref{sec-theory}
-we performed the following experiments. We measure the KL-divergence two kinds of samples: (1) between random sub-samples of the same sequence, generated using a modified version of Algorithm~\ref{alg-slce-ss} where overlapping events are dropped and (2) between random sub-samples taken from different sequences. The results are shown in Figure~\ref{fig-subseq-kl}. As Figure~\ref{fig-subseq-kl} shows, the KL-divergence between sub-sequences of the same sequence of events is relatively small compared to the typical KL-divergence between sub-samples of different sequences of events. This observation supports our repeatability and periodicity assumption.
+we performed the following experiments. We measure the KL-divergence between two kinds of samples: (1) between random sub-samples of the same sequence, generated using a modified version of Algorithm~\ref{alg-slce-ss} where overlapping events are dropped and (2) between random sub-samples taken from different sequences. The results are shown in Figure~\ref{fig-subseq-kl}. As Figure~\ref{fig-subseq-kl} shows, the KL-divergence between sub-sequences of the same sequence of events is relatively small compared to the typical KL-divergence between sub-samples of different sequences of events. This observation supports our repeatability and periodicity assumption.
 Also note that additional plot (\ref{fig-subseq-kl-texts}) is provided as an example for data without any repeatable structure.
 
 \subsubsection{Dataset split}
@@ -456,7 +456,7 @@ GBM based model requires its input to be a flat vector of the fixed length. In o
 
 We use the following approach to produce hand-crafted features. All attributes of each transaction are either numerical (e. g. amount) or categorical (e.g. merchant type (MCC code), transaction type, etc.).
 For the numerical type of attribute we apply aggregation functions, such as 'sum', 'mean', 'std', 'min', 'max', over all transactions per user. For example, if we apply 'sum' for the numerical field 'amount' we obtain a feature 'sum of all transaction amounts per user'. 
-For the categorical type of attribute we apply aggregation functions in a slightly different way. For each unique value of categorical attribute we apply aggregation functions, such as 'count', 'mean', 'std' over all transactions per user' numerical attribute. For example, if we apply 'mean' for the numerical attribute 'amount' grouped by categorical attribute 'MCC code' we obtain a feature 'mean amount of all transactions for each MCC code per user'. 
+For the categorical type of attribute we apply aggregation functions in a slightly different way. For each unique value of categorical attribute we apply aggregation functions, such as 'count', 'mean', 'std' over all transactions per user' numerical attribute. For example, if we apply 'mean' for the numerical attribute 'amount' grouped by categorical attribute 'MCC code' we obtain one feature 'mean amount of all transactions for the specific MCC code per user'. 
 % For example, for age prediction task we have one categorical attribute (small group) with 200 unique values, combining it with amount we can produce $200 * 3$ features ('group0 x amount x count',  'group1 x amount x count', ..., 'group199 x amount x count', 'group0 x amount x mean', ...). In total we use approx 605 features for this task.
 
 \subsubsection{Self-supervised baselines} \label{sec-ss-base}
@@ -504,16 +504,12 @@ To evaluate the proposed method of sub-sequence generation (see Section~\ref{sec
 %, what confirm theoretical results (see Section \ref{sec-theory}).
 Also, note that the random samples strategy is similar to the augmentation strategy proposed by \cite{Yao2020SelfsupervisedLF}, and the random disjoint samples strategy is similar to sub-sequence generation proposed by \cite{Ma2020DisentangledSI}.
 
-We evaluated several possible loss functions and found that contrastive loss that can be considered as the basic variant of contrastive learning loss, performs on par or better than other losses on the downstream tasks. (see Table~\ref{tab-loss-type}).
-This means that improvements obtained by more recent losses in object recognition tasks does not necessarily lead to gains in other downstream tasks.
+We evaluated several contrastive learning loss functions that showed promising performance on different datasets~\citep{Kaya2019DeepML} and some classical variants: contrastive~loss~\citep{Hadsell2006DimensionalityRB}, binomial deviance loss~\citep{Yi2014DeepML}, triplet loss \citep{Hoffer2015DeepML}, histogram~loss~\citep{Ustinova2016LearningDE}, and margin~loss~\citep{Manmatha2017SamplingMI}. The results of comparison are shown in the Table~\ref{tab-loss-type}. 
+It is interesting to observe that even contrastive loss that can be considered as the basic variant of contrastive learning loss allows to get strong results on the downstream tasks. Our hypothesis is that an increase in the model performance on contrastive learning task does not always lead to an increase in performance on downstream tasks.
 
 We also compared popular negative sampling strategies (distance-weighted sampling~\citep{Manmatha2017SamplingMI}, and hard-negative mining~\citep{Schroff2015FaceNetAU}) with random negative sampling strategy.
 The results are shown in the Table \ref{tab-neg-sampl}.
 We found that hard negative mining leads to a significant increase in quality on downstream tasks in comparison to random negative sampling.
-
-We consider several contrastive learning losses that showed promising performance on different datasets~\citep{Kaya2019DeepML} and some classical variants: contrastive~loss~\citep{Hadsell2006DimensionalityRB}, binomial deviance loss~\citep{Yi2014DeepML}, triplet loss \citep{Hoffer2015DeepML}, histogram~loss~\citep{Ustinova2016LearningDE}, and margin~loss~\citep{Manmatha2017SamplingMI}. The results of comparison are shown in the Table~\ref{tab-loss-type}.
-
-It is interesting to observe that even contrastive loss that can be considered as the basic variant of contrastive learning loss allows to get strong results on the downstream tasks (see Table \ref{tab-loss-type}). Our hypothesis is that an increase in the model performance on contrastive learning task does not always lead to an increase in performance on downstream tasks.
 
 As shown in Table \ref{tab-enc-type}, different choices of encoder architectures show comparable performance on the downstream tasks.
 
@@ -614,12 +610,12 @@ Note, that increasing the embedding size will also linearly increase the trainin
 
 \subsubsection{Self-supervised embeddings}
 
-We compared CoLES with baselines described in Section~\ref{sec-baselines} in two scenarios. First, we compared embeddings produced by the CoLES encoder with other types of embeddings and with manually created aggregates by using them as input features of a downstream task model. The downstream task model is trained by LightGBM~\citep{Ke2017LightGBMAH}  independently from the sequence encoder. As Table~\ref{tab-downstream-res-emb} demonstrates, our method generates sequence embeddings of sequential data that achieve strong performance results in comparison to the case of manually crafted features when used on the downstream tasks.
+We compared CoLES with baselines described in Section~\ref{sec-baselines} in two scenarios. First, we compared embeddings produced by the CoLES encoder with other types of embeddings and with manually created aggregates by using them as input features of a downstream task model (see Figure~\ref{fig-arch}, Phase 2a). The downstream task model is trained by LightGBM~\citep{Ke2017LightGBMAH} independently from the sequence encoder. As Table~\ref{tab-downstream-res-emb} demonstrates, our method generates sequence embeddings of sequential data that achieve strong performance results in comparison to the case of manually crafted features when used on the downstream tasks.
 In particular, Table~\ref{tab-downstream-res-emb} shows that even unsupervised CoLES embeddings perform on par and sometimes even better than hand-crafted features. Also note that CoLES embeddings consistenlty outperform embeddings produced by the other self-supervised baselines on each dataset.
 
 \subsubsection{Fine-tuned embeddings}
 
-In the second scenario, we fine-tune pre-trained models for specific downstream tasks. The models are pre-trained using CoLES and other self-supervised learning approaches and then are additionally trained on the labeled data for the specific task in the same way as we trained a neural net for the supervised learning (see Section~\ref{sec-baselines}). A neural net without pre-training is also added to the comparison. As Table~\ref{tab-downstream-res} shows, CoLES representations obtained after fine-tuning achieve superior performance on all the considered datasets, outperforming all other methods by significant margins.
+In the second scenario, we fine-tune pre-trained models for specific downstream tasks (see Figure~\ref{fig-arch}, Phase 2b). The models are pre-trained using CoLES and other self-supervised learning approaches and then are additionally trained on the labeled data for the specific task in the same way as we trained a neural net for the supervised learning (see Section~\ref{sec-baselines}). A neural net without pre-training is also added to the comparison. As Table~\ref{tab-downstream-res} shows, CoLES representations obtained after fine-tuning achieve superior performance on all the considered datasets, outperforming all other methods by significant margins.
 
 \begin{table}
 \centering
@@ -742,7 +738,7 @@ Jul 12 & 14000 & USD & 1232323 & 5424443 & 14 \\
 Self-supervised CoLES embenddings are widely used in the ecosystem of a large European financial services company.
 In particular, we created two types of embeddings: (1) \emph{legal entity embeddings} of the small and medium--size companies,
 based on commercial transactions and operational histories of their businesses and (2) \emph{personal embeddings} of individual/retail customers %of the company, their embeddings are%
-based on their debit/credit card transactional histories. Table~\ref{tab-tr-data} and Table~\ref{tab-org-tr-data} provide some examples of the transactional data used for building personal and legal entities embeddings. Overall, the dataset of 10 million corporate clients with the mean number of 200 transactions per client was used to train the model to generate legal entities embeddings, and the dataset of 5 million clients with the mean number of 400 transactions per client was used to train the model producing personal embeddings. These two "in-house" commercial datasets are much larger than the public datasets described in Section~\ref{sec-exp}, and this availability of extensive amounts of self-supervised training data allowed us to generate embeddings of significantly higher quality than on the publicly available data.
+based on their debit/credit card transactional histories. Table~\ref{tab-tr-data} and Table~\ref{tab-org-tr-data} provide some examples of the transactional data used for building personal and legal entities embeddings. Overall, the dataset of 10 million corporate clients with the mean number of 200 transactions per client was used to train the model for legal entities embeddings, and the dataset of 5 million clients with the mean number of 400 transactions per client was used to train the model for personal embeddings. These two "in-house" commercial datasets are much larger than the public datasets described in Section~\ref{sec-exp}, and this availability of extensive amounts of self-supervised training data allowed us to generate embeddings of significantly higher quality than on the publicly available data.
 
 We performed an extensive evaluation of CoLES embeddings on these in-house datasets by applying them to different downstream modelling tasks.
 Legal entity embeddings were applied in the following use cases:
@@ -761,7 +757,7 @@ Personal embeddings are applied to the following downstream~tasks:
 \end{itemize}
 
 
-We considered the following three scenarios in most of these tasks: (1) the baseline scenario where only the hand-crafted features were used for predictive modelling; (2) the CoLES scenario where  self-supervised modeling described in Section~\ref{sec-method} was used to generate embeddings subsequently used as features of predictive models; (3) the hybrid (Baseline + CoLES) scenario where both the hand-crafted features and the CoLES embeddings were used for predictive modelling. In all of these three scenarios, we used the LightGBM method~\citep{Ke2017LightGBMAH} in predictive modelling.
+We considered the following three scenarios in most of these tasks: (1) the baseline scenario, where only the hand-crafted features were used for predictive modelling; (2) the CoLES scenario, where self-supervised embeddings, generated using the propsoed method, subsequently used as features of predictive models; (3) the hybrid (Baseline + CoLES) scenario where both the hand-crafted features and the CoLES embeddings were used for predictive modelling. In all of these three scenarios, we used the LightGBM method~\citep{Ke2017LightGBMAH} for predictive modelling.
 In the 1st and the 3rd scenarios, we deployed the existing sets of hand-crafted features previously developed in the organization for the considered use cases (see Section~\ref{sec-hand-features} for some examples of the hand-crafted features).
 %These features were partly based on the aggregate statistics of the transaction history and partly on some additional attributes obtained from other data sources.
 
@@ -775,7 +771,7 @@ In order to minimise the efforts of deploying CoLES embeddings inside the compan
 
 In particular, the encoder based on an RNN-type architecture such as GRU~\citep{Cho2014LearningPR} allows to calculate embedding $c_{t+k}$ by updating embedding $c_t$ instead of  calculating embedding $c_{t+k}$ from the whole sequence of past events $z_{1:t}$: $c_k = rnn(c_t, z_{t+1:k})$. We use this optimization to reduce the inference time to update already existing client embeddings with new transactional events that occurred after the previous calculation of embeddings. This is possible due to the recurrent nature of RNN-like networks.
 
-Furthermore, compact version of embeddings can be used to minimize their storage volume. To produce the compact version, we discretized the components of the embedding vectors, i.e. we mapped 8-byte float values to the discrete set of values in the range from 0 to 15. After discretization, each component of the embedding vector is stored in 4 bits, hence, a 256-dimensional embedding can be stored in 128 bytes.
+Furthermore, compact version of embeddings can be used to minimize their storage (or transfer) volume. To produce the compact version, we discretized the components of the embedding vectors, i.e. we mapped 8-byte float values to the discrete set of values in the range from 0 to 15. After discretization, each component of the embedding vector is stored in 4 bits, hence, a 256-dimensional embedding can be stored in 128 bytes.
 % Since it is not possible to update compact embeddings using the optimized procedure described in the previous paragraph, the compact version is being used for storing the historical versions of embeddings calculated for some specific dates and, also, for data exchange purposes.
 
 
