Update on Overleaf.

--- a/sigmod2022.bib
+++ b/sigmod2022.bib
@@ -562,3 +562,50 @@
   year={2019},
   pages={5628--5637}
 }
+
+@article{Hochreiter1997LongSM,
+  title={Long Short-Term Memory},
+  author={Sepp Hochreiter and J{\"u}rgen Schmidhuber},
+  journal={Neural Computation},
+  year={1997},
+  volume={9},
+  pages={1735-1780}
+}
+
+@inproceedings{Cho2014OnTP,
+  title={On the Properties of Neural Machine Translation: Encoder–Decoder Approaches},
+  author={Kyunghyun Cho and Bart van Merrienboer and Dzmitry Bahdanau and Yoshua Bengio},
+  booktitle={SSST@EMNLP},
+  year={2014}
+}
+
+@article{Kennedy2019APA,
+  title={A parallel and distributed stochastic gradient descent implementation using commodity clusters},
+  author={Robert K. L. Kennedy and Taghi M. Khoshgoftaar and Flavio Villanustre and Timothy Humphrey},
+  journal={Journal of Big Data},
+  year={2019},
+  volume={6},
+  pages={1-23}
+}
+
+@inproceedings{Zhao2016FastAP,
+  title={Fast Asynchronous Parallel Stochastic Gradient Descent: A Lock-Free Approach with Convergence Guarantee},
+  author={Shen-Yi Zhao and Wu-Jun Li},
+  booktitle={AAAI},
+  year={2016}
+}
+
+@inproceedings{Recht2011HogwildAL,
+  title={Hogwild: A Lock-Free Approach to Parallelizing Stochastic Gradient Descent},
+  author={Benjamin Recht and Christopher R{\'e} and Stephen J. Wright and Feng Niu},
+  booktitle={NIPS},
+  year={2011}
+}
+
+@article{Zhuang2019AttributedSE,
+  title={Attributed Sequence Embedding},
+  author={Zhongfang Zhuang and Xiangnan Kong and Elke A. Rundensteiner and Jihane Zouaoui and Aditya Arora},
+  journal={2019 IEEE International Conference on Big Data (Big Data)},
+  year={2019},
+  pages={1723-1728}
+}
